[package]
name = "ble-nrf52810"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = "0.10.4"
pretty_env_logger = "0.4.0"
tokio = { version = "1.10.0", features = ["macros", "rt", "rt-multi-thread"] }
uuid = "1.3.0"
futures = "0.3.16"
chrono = "0.4.19"
log = "0.4.14"